--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -5,8 +5,8 @@
     "note": "<strong>Please note:</strong> This form is for data collection only. It will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "paragraph1": "Welcome! This study should only take about 5 minutes to complete.",
     "selectYourLanguage": "Language",
-    "paragraph2": "Covid-19 Cough Data Collection Study",
     "selectLocation": "Location",
+    "paragraph2": "Covid-19 Cough Data Collection Study",
     "selectCountry": "Select country",
     "selectRegion": "Select region",
     "introductionText": "<strong>Important note:</strong> This app is only for demonstration purposes and does not provide a prediction. Please visit <2>Virufy Study</2> to contribute your cough and help us to complete this app.",
@@ -16,13 +16,16 @@
     "hospitalCodePlaceholder": "type here...",
     "patientIdPlaceholder": "type here...",
     "nextButton": "Next",
+    "createdBy": "Created By",
+    "provideAccessCode": "Access code",
+    "enterAccessCode": "Enter access  code",
     "aboutUsTitle": "About Us"
   },
   "helpVirufy": {
     "title": "About Virufy",
     "ourSupporters": "Our Supporters",
     "introParagraph": "<p>Welcome to our study! This should only take you about 5 minutes to complete. Before we begin, let’s discuss what we will cover:</p>",
-    "aboutParagraph": "<p>Virufy is a <strong>nonprofit organization<strong> that is working to develop the means to use <strong>artificial intelligence (Al) to screen for COVID-19 from cough patterns</strong> rapidly and at no cost through use of a smartphone for the benefit of low-income countries.</p><p>Our team includes researchers from over <strong>25 countries</strong>. Our research has shown that Al technology may be able to identify COVID's unique cough signature.</p><p>By collecting <strong>coughs recordings<strong> from people around the world, Virufy is improving the robustness of its AI algorithm in recognizing COVID's unique sound pattern.</p><p><strong>You have the power</strong>to help benefit millions of people across the globe by <strong>contributing your cough</strong> in our study.</p>",
+    "aboutParagraph": "<0>Virufy is a <strong>nonprofit organization</strong> that is working to develop the means to use <strong> artificial intelligence (Al) to screen for COVID-19 from cough patterns</strong>rapidly and at no cost through use of a smartphone for the benefit of low-income countries.</0><1>Our team includes researchers from over <strong>25 countries</strong>.<3>Our research</3> has shown that Al technology may be able to identify COVID's unique cough signature.</1><2>By collecting <strong>coughs recordings</strong> from people around the world, Virufy is improving the robustness of its AI algorithm in recognizing COVID's unique sound pattern.</2><3><strong>You have the power</strong>to help benefit millions of people across the globe by <strong>contributing your cough</strong> in our study.</3>",
     "bulletsIntro": "<strong>Intro:</strong> About us and Safety Reminders",
     "bulletCough": "<strong>Cough Into Phone</strong>",
     "bulletQuestions": "<strong>Quick Health Questions</strong>",
@@ -68,8 +71,8 @@
     "header": "Upload a file",
     "addFile": "Add your file",
     "constraint": "Add up to 5 MB",
-    "next": "Done",
     "uploadFile" : "Upload File",
+    "next": "Done",
     "micError": "Can’t access the mic? Upload an audio file.",
     "micErrorDescription": "Please upload an audio file here.",
     "fileDurationTooShort": "Please upload a file of at least 3 seconds",
@@ -84,7 +87,7 @@
     },
     "title": "Upload Complete",
     "subtitle": "Feel free to take a listen!",
-    "next": "Done",
+    "next": "Continue",
     "retake": "Retake"
   },
   "predictionResult": {
@@ -96,7 +99,6 @@
     "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please <strong>continue to take appropriate measures</strong> based on the advice of your healthcare professional or applicable regulatory body and reassess yourself in our app daily.",
     "resultDetected": "COVID-19: DETECTED",
     "resultDetectedText": "Your voice has indicators of COVID-19. Please contact your healthcare professional and take additional precautions.",
-    "predictionResultTitle": "Prediction Result",
     "likelihoodPrefix": "COVID-19 result:",
     "nextButton": "Submit another cough",
     "submitError": "An error occurred. Please try again.",
