--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,12 +9,6 @@
     "paragraph2": "Covid-19 Cough Data Collection Study",
     "selectCountry": "Select country",
     "selectRegion": "Select region",
-    "introductionText": "<strong>Important note:</strong> This app is only for demonstration purposes and does not provide a prediction. Please visit <2>Virufy Study</2> to contribute your cough and help us to complete this app.",
-    "introductionRecomendations": "<strong>To reduce risk and self-harm, we advise you to:</strong><p>Please use your own device and wear a mask when appropriate.</p><p>Disinfect your device and any affected or nearby surfaces after recording your cough/speech.</p><p>If you have an underlying condition that increases your risk from coughing, please check with your health care provider before participating.</p><p>If you feel your symptoms are getting worse, please contact your local medical response.</p>",
-    "hospitalCodeLabel": "Hospital code",
-    "patientIdLabel": "Patient ID",
-    "hospitalCodePlaceholder": "type here...",
-    "patientIdPlaceholder": "type here...",
     "nextButton": "Next",
     "createdBy": "Created By",
     "provideAccessCode": "Access code",
@@ -22,11 +16,10 @@
     "aboutUsTitle": "About Us"
   },
   "helpVirufy": {
-    "title": "About Virufy",
     "ourSupporters": "Our Supporters",
-    "introParagraph": "<p>Welcome to our study! This should only take you about 5 minutes to complete. Before we begin, let’s discuss what we will cover:</p>",
-    "aboutParagraph": "<0>Virufy is a <strong>nonprofit organization</strong> that is working to develop the means to use <strong> artificial intelligence (Al) to screen for COVID-19 from cough patterns</strong>rapidly and at no cost through use of a smartphone for the benefit of low-income countries.</0><1>Our team includes researchers from over <strong>25 countries</strong>.<3>Our research</3> has shown that Al technology may be able to identify COVID's unique cough signature.</1><2>By collecting <strong>coughs recordings</strong> from people around the world, Virufy is improving the robustness of its AI algorithm in recognizing COVID's unique sound pattern.</2><3><strong>You have the power</strong>to help benefit millions of people across the globe by <strong>contributing your cough</strong> in our study.</3>",
-    "bulletsIntro": "<strong>Intro:</strong> About us and Safety Reminders",
+    "introParagraph": "Welcome to our study! This should only take you about 5 minutes to complete. Before we begin, let’s discuss what we will cover:",
+    "aboutParagraph": "<0>Virufy is a <strong>nonprofit organization</strong> that is working to develop the means to use <strong> artificial intelligence (Al) to screen for COVID-19 from cough patterns</strong>rapidly and at no cost through use of a smartphone for the benefit of low-income countries.</0><1>Our team includes researchers from over <strong>25 countries</strong>. <3>Our research</3> has shown that Al technology may be able to identify COVID's unique cough signature.</1><2>By collecting <strong>coughs recordings</strong> from people around the world, Virufy is improving the robustness of its AI algorithm in recognizing COVID's unique sound pattern.</2><3><strong>You have the power</strong> to help benefit millions of people across the globe by <strong>contributing your cough</strong> in our study.</3>",
+    "bulletsIntro": "<strong>Intro: </strong>About us and Safety Reminders",
     "bulletCough": "<strong>Cough Into Phone</strong>",
     "bulletQuestions": "<strong>Quick Health Questions</strong>",
     "installApp": "Install as an app",
@@ -47,9 +40,9 @@
     "recordCough": {
       "header": "Record your cough",
       "title": "Instructions",
-      "intro1": "Find a quiet environment that is 20 feet away from those around you.",
-      "intro2": "Wear a surgical or cloth mask and hold your device two hands-length away from your face.",
-      "text": "Click the record button below and <strong>cough intentionally three times with a deep breath between each cough.</strong> When you are done, tap the stop button.",
+      "intro1": "Find a <strong>quiet environment</strong> at least <strong>20 ft (6m)</strong> away from others and wear a cloth or surgical mask. If you are feeling ill, please sit down.",
+      "intro2": "Hold your device <strong>1-2 ft (30-60 cm)</strong> away from your mouth and <strong>do not obstruct</strong> or cover your device with plastic. Do not cough violently or too forcefully.",
+      "text": "Tap the record button and <strong>cough intentionally</strong> into the bottom of your phone <strong>3 times</strong> with a <strong>deep breath</strong> between each cough. When you are done, tap the stop button. ",
       "record": "Record",
       "stop": "Stop"
     },
